         - ...internal...ConfigurableOption has disappeared.
  * Evaluation in binaries is functional
  * Search for references now finds results in binaries. Indexes in old workspaces are recomputed when restarted 
     which may result in longer startup times.


PRs Fixed in this Release (since 1.0NL stream)
==================================================================================
1GJIYKP: ITPJCORE:WINNT - type hierarchy - contains unrelated types
1GITFQR: IVJIDT:WIN2000 - Wrong byte code generation, Inconsistent stack height 1 != 0 error
1GIHUQP: ITPJCORE:WINNT - search for static field should be more accurate
1GIT66X: ITPJCORE:WINNT - ClassCastException when calling CodeAssist
1GJA0WG: ITPJCORE:WINNT - AbortCompilationUnit when doing a Search
1GH49HW: ITPJUI:WINNT - Search functionality is misleading when viewing source from jar
1GFXPE5: ITPJUI:ALL - Search for method references broken
1GFM3X3: ITPJUI:WINNT - Wrong code formatter default for keeping else on same line
1GHSM7B: ITPJUI:ALL - formatting of anonymous classes
1GGPVHN: ITPJUI:WIN2000 - Not getting hover Javadoc for ISelection
1GE2LO2: ITPJCORE:WIN2000 - SourceStart and SourceEnd of synchronized statement
1GIUTIZ: ITPJCORE:WIN2000 - AST: case statement doesn't cover case keyword
1GITCCY: ITPJCORE:WIN2000 - AST: strange LocalDeclaration.declarationSourceEnd 
1GIRQFW: ITPJCORE:WIN2000 - AST: wrong source end if subnode is of type AnnonymousTypeDeclaration
1GIRHRP: ITPJCORE:WIN2000 - AST: wrong sourceStart and sourceEnd in SynchronizedStatement
1GHUAUO: ITPJCORE:ALL - Renaming an element in a working copy corrupts the working copy
1GHUAM1: ITPJCORE:ALL - NPE when renaming an element in a working copy
1GHDA2V: ITPJCORE:WINNT - ClassCastException when doing a search
1GFY02B: ITPJUI:ALL - Delete a method and saving introduces extra lines
1GFOFMD: ITPJUI:WIN2000 - New class should have space between package and class decls